--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,9 @@
 <!--    android:versionCode="1"-->
 <!--    android:versionName="v1">-->
 
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission
+        android:name="android.permission.INTERNET">
+    </uses-permission>
 
     <application
         android:allowBackup="true"
@@ -18,7 +20,7 @@
         android:theme="@style/Theme.LanguageConverter"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.languageconverter.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.LanguageConverter">
